2006-05-12 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.cpp
	(rgb_to_hsv(const float *, float *)): Assert validity of input
	parameter.
	(hsv_to_rgb(float, float, float, float *)): Assert validity of
	input parameters.

2006-05-08 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp
	(js_::Browser::loadURL(JSContext *, JSObject *, uintN, jsval *,
	jsval *)): Accommodate calls using 0 or 1 argument; handle any
	exceptions.

2006-05-08 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::load_url(const std::vector<std::string> &,
	const std::vector<std::string> &)): Changed exception
	specification to throw boost::thread_resource_error.
	* src/libopenvrml/openvrml/browser.h (openvrml::browser): Changed
	exception specification of load_url member function to throw
	boost::thread_resource_error.

2006-05-06 Braden McDaniel  <braden@endoframe.com>

	Accommodate building against Boost libraries that have a
	configuration-specific suffix.

	* README
	* configure.ac: Added AC_ARG_VAR BOOST_LIB_SUFFIX.
	* src/libopenvrml/Makefile.am: Append BOOST_LIB_SUFFIX to
	boost_thread.

2006-05-06 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Added missing comma.
	* m4/antlr.m4: Check to ensure JAVA is set; direct stdout and
	stderr output from antlr to /dev/null.

2006-04-27 Braden McDaniel  <braden@endoframe.com>

	Ensure the version of antlr that gets used to generate code is the
	same as the version of libantlr that is included with OpenVRML.

	* configure.ac: Check for antlr 2.7.4.
	* m4/antlr.m4 (OV_PROG_ANTLR): Allow specification of a particular
	version of antlr.

2006-04-27 Braden McDaniel  <braden@endoframe.com>

	* m4/jdk.m4 (OV_PROG_JAVA): Added AC_ARG_VAR JAVAFLAGS.

2006-04-21 Braden McDaniel  <braden@endoframe.com>

	Incremented Rendering and Lighting component support levels to 4
	and 3, respectively.  These levels to not indicate any additional