@@ -1,6 +1,14 @@
 2006-05-12 Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml/openvrml/basetypes.cpp
+	(rgb_to_hsv(const float *, float *)): Removed "inline"; changed
+	argument names for clarity.
+	(hsv_to_rgb(float, float, float, float *)): Removed "inline";
+	changed argument names for clarity.
+
+2006-05-12 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/basetypes.cpp
 	(rgb_to_hsv(const float *, float *)): Assert validity of input
 	parameter.
 	(hsv_to_rgb(float, float, float, float *)): Assert validity of
